<resources>
    <string name="app_name">VideoConferenceSample</string>
    <string name="back_to_connect_client">Back to connect client</string>
    <string name="video_conference_sample">Video Conference Sample</string>
    <string name="conference_subtitle">Use access and room tokens generated securely by your server.</string>
    <string name="connect">Connect</string>
    <string name="connect_room">Connect room</string>
    <string name="room_token">Room token</string>
    <string name="access_token">Access token from your server</string>
    <string name="start">Start</string>
</resources>
